--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 
-tokio = {version = "1.48", features = ["rt", "rt-multi-thread"]}
+tokio = {version = "1.48", features = ["rt", "rt-multi-thread", "net", "io-util", "time"]}
 tokio-util = {version = "0.7", features = ["io"]}
 
 reqwest = {version = "0.12", features=["stream"]}
@@ -37,3 +37,18 @@ open = "5.3"
 
 millisecond = "0.15"
 humantime = "2.3"
+
+tokio-rustls = "0.26"
+
+hyper = {git = "https://github.com/hyperium/hyper", features = ["client", "http1"]}
+http-body-util = "0.1"
+
+webpki-roots = "1.0.5"
+
+rustls-pki-types = "1.13.2"
+
+pin-project-lite = "0.2"
+
+connection-pool = "0.3"
+
+lockfree = "0.5"
