custom connection pool; retain comms when changing communication source

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 
-tokio = {version = "1.48", features = ["rt", "rt-multi-thread", "net", "io-util", "time"]}
+tokio = {version = "1.48", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "macros"]}
 tokio-util = {version = "0.7", features = ["io"]}
 
 reqwest = {version = "0.12", features=["stream"]}
@@ -49,6 +49,6 @@ rustls-pki-types = "1.13.2"
 
 pin-project-lite = "0.2"
 
-connection-pool = "0.3"
-
 lockfree = "0.5"
+
+ratatui-notifications = "0.1.0"
