--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# filter savedata
+filter_data.bin
